assets/css/main.css
.navbar-custom {
	background-color: #0277bd;
	border-color: #0277bd;
}
.navbar-customtext {
	color: #ffffff;
}
.icon-bar {
	background-color: #ffffff;
}
.w-100 {
	width: 100%;
	display: inline-block;
}
body {
	background-color: #2c2c2c;
	color: #f0f0f0;
	padding-bottom: 16px;
	/*overflow-x: hidden;*/
}
div.item, div.spell_damage {
	background-color: #110211f2;
	margin: 8px;
	padding: 8px;
	border: 2px solid #210152f2;
	box-shadow: 3px 0 0 #110211f2, -3px 0 #110211f2, 0 3px 0 #110211f2, 0 -3px 0 #110211f2;
	line-height: 1.2;
	display: inline-block;
}

div.item {
	width: 250px;
	max-width: 250px;
}

div.spell_damage {
	width: calc(100% - 16px);
	min-width: 150px;
	display: inline-table;
}

legend.build_res_label {
	padding: 0 10px;
	width: auto;
	margin-left: 16px;
	margin-bottom: 5px;
}

table.item_table {
	display: block;
	-webkit-transition: all .5s;
	-moz-transition: all .5s;
	-ms-transition: all .5s;
	-o-transition: all .5s;
	transition: all .5s;
	/*overflow: auto hidden;*/
}

span.dps {
	text-align: center;
	display: block;
}

.float_left {
	float: left;
}

#item_list_box:after {
	content: '';
	display: block;
	clear: both;
}

.damage_left {
	float: left;
	width: 220px;
}
.damage_right {
	float: right;
	width: 220px;
}

.center {
	text-align: center;
}

td {
	padding: 0 8px 0 0;
}
fieldset {
	border: 1px solid #999;
}
.item_name.legendary, .mctext.aqua {
	color: #4de8e8;
	text-shadow: 1px 1px #133b3b;
}
.item_name.unique, .mctext.yellow {
	color: #ffff55;
	text-shadow: 1px 1px #373712;
}
.item_name.rare, .mctext.purple {
	color: #fc54fc;
	text-shadow: 1px 1px #361236;
}
.item_name.normal, .mctext.white {
	color: #fcfcfc;
	text-shadow: 1px 1px #363636;
}
.item_name.mythic, .mctext.dark_purple {
	color: #a800a8;
	text-shadow: 1px 1px #240024;
}
.item_name.set, .mctext.green {
	color: #54fc54;
	text-shadow: 1px 1px #123512;
}
div.item, .mctext.gray {
	color: #9e9e9e;
	text-shadow: 1px 1px #222222;
}
.item_name.fabled, .mctext.red {
	color: #fc5454;
	text-shadow: 1px 1px #3c1414;
}
.mctext.dark_gray {
	color: #4c4c4c;
	text-shadow: 1px 1px #121212;
}
.mctext.dark_red {
	color: #9e0000;
	text-shadow: 1px 1px #230000;
}
.mctext.dark_green {
	color: #008f00;
	text-shadow: 1px 1px #002900;
}
.mctext.gold {
	color: #df9500;
	text-shadow: 1px 1px #232300;
}
.chosen-search-input {
	color: #444444;
}
.item_select {
	background: #444444;
	margin-bottom: 4px;
	padding: 10px 15px;
}
.powder_div {
	display: none;
	float: left;
	padding: 16px;
}
.powder_div.shown {
	display: inline-block;
}
.powder {
	height: 48px;
	width: 48px;
	background-repeat: no-repeat;
	background-size: cover;
	image-rendering: pixelated;
	border: none;
	display: inline-block;
	cursor: pointer;
}
.build_content {
	padding: 0 16px 16px 16px;
}
.large {
	font-size: 1.2em;
}
div.item_div > .item {
	float: left;
}
input.sp_input {
	padding: 0 0 0 6px;
	width: 100%;
}
.powder.powder_t6, .powder.powder_t5, .powder.powder_t4 {
	background-image: url(/assets/img/powders/thunder1.png);
}
.powder.powder_t3, .powder.powder_t2, .powder.powder_t1 {
	background-image: url(/assets/img/powders/thunder0.png);
}
.powder.powder_e6, .powder.powder_e5, .powder.powder_e4 {
	background-image: url(/assets/img/powders/earth1.png);
}
.powder.powder_e3, .powder.powder_e2, .powder.powder_e1 {
	background-image: url(/assets/img/powders/earth0.png);
}
.powder.powder_a6, .powder.powder_a5, .powder.powder_a4 {
	background-image: url(/assets/img/powders/air1.png);
}
.powder.powder_a3, .powder.powder_a2, .powder.powder_a1 {
	background-image: url(/assets/img/powders/air0.png);
}
.powder.powder_w6, .powder.powder_w5, .powder.powder_w4 {
	background-image: url(/assets/img/powders/water1.png);
}
.powder.powder_w3, .powder.powder_w2, .powder.powder_w1 {
	background-image: url(/assets/img/powders/water0.png);
}
.powder.powder_f6, .powder.powder_f5, .powder.powder_f4 {
	background-image: url(/assets/img/powders/fire1.png);
}
.powder.powder_f3, .powder.powder_f2, .powder.powder_f1 {
	background-image: url(/assets/img/powders/fire0.png);
}
.powder.powder_empty {
	background-image: url(/assets/img/powders/empty.png);
}
.powder:before {
	font-size: 16px;
	font-weight: bold;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.powder:hover {
	filter: brightness(1.3);
}
.powder.powder_f6:before, .powder.powder_a6:before, .powder.powder_e6:before, .powder.powder_t6:before, .powder.powder_w6:before {
	content: 'VI';
}
.powder.powder_f5:before, .powder.powder_a5:before, .powder.powder_e5:before, .powder.powder_t5:before, .powder.powder_w5:before {
	content: 'V';
}
.powder.powder_f4:before, .powder.powder_a4:before, .powder.powder_e4:before, .powder.powder_t4:before, .powder.powder_w4:before {
	content: 'IV';
}
.powder.powder_f3:before, .powder.powder_a3:before, .powder.powder_e3:before, .powder.powder_t3:before, .powder.powder_w3:before {
	content: 'III';
}
.powder.powder_f2:before, .powder.powder_a2:before, .powder.powder_e2:before, .powder.powder_t2:before, .powder.powder_w2:before {
	content: 'II';
}
.powder.powder_f1:before, .powder.powder_a1:before, .powder.powder_e1:before, .powder.powder_t1:before, .powder.powder_w1:before {
	content: 'I';
}
.powder.powder_empty:before {
	content: '\00a0';
}

